# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2013-12-06 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Change the cloudi_service_map_reduce:cloudi_service_map_reduce_new/3
      callback functionality to be more useful for algorithm initialization
    * Add the cloudi_service_map_reduce:cloudi_service_map_reduce_info/3
      for handling active service requests
    * Add binary usage to cloudi_service_db_pgsql internal usage and simplify
      internal usage

2013-12-04 Michael Truog   <mjtruog [at] gmail (dot) com>

    * cloudi_service_http_cowboy support added for outgoing (CloudI->websocket)
      service requests iolist usage
    * cloudi_service_http_cowboy log statement for when outgoing
      service requests don't match the output configuration
    * Add "immediate" timeout value usage to the cloudi module and the
      cloudi_service module to avoid blocking on a service name lookup
    * Fix and simplify the guards within cloudi_service_http_cowboy
      to make sure iolists are allowed into cowboy when
      'output' is configured as 'external' or 'internal'

2013-12-03 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add cloudi_service:timeout_max/1 and cloudi:timeout_max/1 functions
    * Update edoc documentation

2013-12-02 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the TIMEOUT_MAX constant and the TIMEOUT_MAX_ERLANG constant
      with configuration validation usage
    * Add the response_timeout_immediate_max service configuration option

2013-11-30 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix ProcessCount and ThreadCount when greater than 1.0 so that it
      uses ceil (previously it was sometimes ceil+1)
    * Add done return value for cloudi_service_map_reduce
      cloudi_service_map_reduce_send/2 so that having more workers than
      work does not cause extra processing
    * Terminate the cloudi_service_map_reduce service after all